--- a/app-tracker-teacher/app/src/main/res/values/strings.xml
+++ b/app-tracker-teacher/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Attendance Tracker - Teacher</string>
+    <string name="btnCreateCourse">Create</string>
+    <string name="btnCancelCreate">Cancel</string>
+    <string name="tvCreateCourseHeader">CREATE A COURSE</string>
 </resources>
