--- a/app-tracker-teacher/app/src/main/res/values/strings.xml
+++ b/app-tracker-teacher/app/src/main/res/values/strings.xml
@@ -1,4 +1,20 @@
 <resources>
+    <string name="btnRegister">Register</string>
+    <string name="btnConfirmRegister">Confirm</string>
+    <string name="formHeader">Teacher Registration</string>
+    <string name="formSubHeader">Please enter the fields below</string>
+    <string name="txtEnterIDnumber">Enter your ID number</string>
+    <string name="etHintID">ID number (e.g. 11812345)</string>
+    <string name="btnNext">Next</string>
+
+    <string name="tvFirstName">First Name</string>
+    <string name="tvLastName">Last Name</string>
+    <string name="tvEmail">Email</string>
+    <string name="tvPassword">Password</string>
+    <string name="tvReenterPassword">Re-enter Password</string>
+
+
+
     <string name="app_name">Attendance Tracker - Teacher</string>
     <string name="btnCreateCourse">Create</string>
     <string name="btnCancelCreate">Cancel</string>
