--- a/app-tracker-teacher/app/src/main/res/values/strings.xml
+++ b/app-tracker-teacher/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="tvCreateMeeting">Enter Date</string>
+
     <string name="btnRegister">Register</string>
     <string name="btnConfirmRegister">Confirm</string>
     <string name="formHeader">Teacher Registration</string>
@@ -25,4 +27,5 @@
     <string name="itemDeleteCourse">Delete course</string>
     <string name="itemEditProfile">Edit profile</string>
     <string name="itemLogout">Logout</string>
+
 </resources>
