testing pull version

--- a/app-tracker-teacher/app/src/main/res/values/strings.xml
+++ b/app-tracker-teacher/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="itemEditProfile">Edit profile</string>
     <string name="itemLogout">Logout</string>
 
+    <string name="accountSecurity">Account security</string>
+
 </resources>
