accomplished update profile feature

--- a/app-tracker-teacher/app/src/main/res/values/strings.xml
+++ b/app-tracker-teacher/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="app_name">Attendance Tracker - Teacher</string>
     <string name="btnCreateCourse">Create</string>
     <string name="btnCancelCreate">Cancel</string>
+    <string name="btnExit">Exit</string>
     <string name="btnConfirm">Confirm</string>
     <string name="btnDelete">Delete</string>
     <string name="tvCreateCourseHeader">CREATE A COURSE</string>
